tests/fixtures/invalid/str_le_dict.py
# Cannot compare with <= Str and Dict[str, int]
x: bool = "hello" <= {"a": 1}
